spacing issue in investors

--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -358,7 +358,7 @@
 
 .features-page-container {
      .my-skill-img-component {
-          box-shadow: 0 2rem 3rem var(--color-light);
+          box-shadow: 0 0rem 6rem 2rem var(--color-light);
           border-radius: 20px;
 
           .inner-component {
@@ -2210,7 +2210,8 @@
                     justify-content: center;
                     background: #ffffff;
                     flex-direction: column;
-                    box-shadow: 0px 2.03738px 112.056px rgba(0, 0, 0, 0.16);
+                    box-shadow: 0 0rem 6rem 2rem var(--color-light);
+
                     padding-left: 0.4rem;
                     padding-right: 0.4rem;
                     width: 20rem;
@@ -3120,7 +3121,7 @@
                justify-content: center;
 
                img {
-                    height: 37rem;
+                    height: 34rem;
                }
 
                @media (max-width: 1250px) {
@@ -3147,13 +3148,13 @@
                display: flex;
                flex-direction: column;
                justify-content: space-between;
-               padding-top: 10%;
-               padding-bottom: 10%;
+               padding-top: 6%;
+               padding-bottom: 4%;
 
                .topContent {
                     display: flex;
-                    padding-left: 14%;
-                    padding-right: 16%;
+                    margin-left: -1rem;
+                    padding-right: 35%;
 
                     &>img {
                          height: 15px;
@@ -3169,6 +3170,7 @@
                     }
 
                     @media (max-width: 786px) {
+                         margin-left: 0rem;
                          &>p {
                               font-size: 18px;
                          }
@@ -3177,7 +3179,7 @@
 
                .circles {
                     display: flex;
-                    padding-left: 16%;
+                    padding-left: 0%;
 
                     .cir1 {
                          img {
@@ -3207,8 +3209,8 @@
                     font-family: var(--soft);
                     font-weight: 400;
                     font-size: 18px;
-                    padding-left: 16%;
-                    padding-right: 16%;
+                    padding-left: 0%;
+                    padding-right: 35%;
 
                     span {
                          color: #4293C5;
